added seperate page files

--- a/cs1810final/index.html
+++ b/cs1810final/index.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>MyBlog</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <header>
     <h1>TheBlog.Com</h1>
@@ -15,14 +16,38 @@
     <div id="navWrapper">
         <nav>
             <ul>
+                <p>HOME</p>
                 <li>All Posts</li>
                 <li>Contact</li>
             </ul>
         </nav>
     </div>
+    <quote>"Curiosity is the essence of our existence"</quote>
+    <p><small>Gene Cernan</small></p>
+    <hr>
     <div id="recentPostsWrapper">
         <h1>Recent Posts</h1>
-        
+        <h1><a href="Post1.html">Duis Aute Irure</a></h1>
+        <p><small>01/15/2032</small></p>
+        <p>     Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
+            dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip
+            ex ea commodo conseq ... </p>
+    </div>
+    <hr>
+    <div>
+        <h1>Tags</h1><span>find something you like by type: </span>
+        <ul>
+            <li>Life on Mars</li>
+            <li>Astronauts</li>
+            <li>Galaxies</li>
+            <li>Neptune and Nebula</li>
+        </ul>
+    </div>
+    <hr>
+    <div>
+        <h1>Email List</h1>
+        <p>Join our email list for a space fact every month</p>
+        <input type="text"><button>enter</button>
     </div>
 </body>
 <footer>
