is this working?

--- a/ProjectPages/resume.html
+++ b/ProjectPages/resume.html
@@ -4,9 +4,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="resume.css">
     <title>Resume Webpage</title>
 </head>
 <header>
+    <img src="jacky-watt-WHINR9mSBQs-unsplash.jpg" width="100%">
+    <h1>"Enter in some awesome quote here"</h1>
     <h1>Dusty Shaw</h1>
     <img src="blank-profile-photo.jpeg">
     <div class="content info">
@@ -17,6 +20,7 @@
     </div>
 </header>
 <body>
+    <img src="Screenshot 2022-02-19 123903.png" alt="designed by me using Canva.Com">
     <main>
         <div class="skills">
             <h2>My Skills</h2>
