--- a/cs1810final/index.html
+++ b/cs1810final/index.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>MyBlog</title>
     <link rel="stylesheet" href="styles.css">
-    
+
 </head>
 <header>
     <h1>TheBlog.Com</h1>
@@ -16,21 +16,26 @@
 <body>
     <div id="navWrapper">
         <nav>
-            <ul>
-                <p>HOME</p>
-                <li>All Posts</li>
-                <li>Contact</li>
-            </ul>
+            <button>All Posts</button>
+            <button>Gallery</button>
+            <button>Demo</button>
+            <button>Contact</button>
+
         </nav>
     </div>
+    <figure>
+        <img src="Jupiter-A-Mind-of-Limits.jpg" width="100%">
+        <figcaption>This image is from NASA</figcaption>
+    </figure>
+
     <quote>"Curiosity is the essence of our existence"</quote>
     <p><small>Gene Cernan</small></p>
     <hr>
     <div id="recentPostsWrapper">
-        <h1>Recent Posts</h1>
+        <p>Recent Posts</p>
         <h1><a href="Post1.html">Duis Aute Irure</a></h1>
         <p><small>01/15/2032</small></p>
-        <p>     Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
+        <p> Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
             dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip
             ex ea commodo conseq ... </p>
     </div>
