--- a/cs1810final/Post1.html
+++ b/cs1810final/Post1.html
@@ -39,8 +39,8 @@
         <hr>
         <main>
             <h1>Duis Aute Irure</h1>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
-                dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip
+            <p>Lorem ipsum <strong> sit amet</strong>, consectetur <b>adipiscing</b> elit, sed do eiusmod tempor incididunt ut labore et
+                dolore magna aliqua. <i>Ut enim ad minim</i> veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip
                 ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore
                 eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia
                 deserunt mollit anim id est laborum.</p>
