--- a/cs1810final/index.html
+++ b/cs1810final/index.html
@@ -7,13 +7,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>MyBlog</title>
     <link rel="stylesheet" href="styles.css">
-
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+        integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 </head>
 <header>
-    <h1>TheBlog.Com</h1>
-</header>
-
-<body>
+    <h1 id="logo">TheBlog.Com</h1>
     <div id="navWrapper">
         <nav>
             <button>All Posts</button>
@@ -23,6 +21,9 @@
 
         </nav>
     </div>
+</header>
+
+<body>
     <figure>
         <img src="Jupiter-A-Mind-of-Limits.jpg" width="100%">
         <figcaption>This image is from NASA</figcaption>
@@ -32,12 +33,18 @@
     <p><small>Gene Cernan</small></p>
     <hr>
     <div id="recentPostsWrapper">
-        <p>Recent Posts</p>
-        <h1><a href="Post1.html">Duis Aute Irure</a></h1>
-        <p><small>01/15/2032</small></p>
-        <p> Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
-            dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip
-            ex ea commodo conseq ... </p>
+        <div id="recentPost1Wrapper">
+            <p>Recent Posts</p>
+            <a id="postLink" href="Post1.html">
+                <h1>Duis Aute Irure</h1>
+                <p><small>01/15/2032</small></p>
+                <p> Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
+                    et
+                    dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
+                    aliquip
+                    ex ea commodo conseq ... </p>
+            </a>
+        </div>
     </div>
     <hr>
     <div>
@@ -50,11 +57,20 @@
         </ul>
     </div>
     <hr>
-    <div>
+    <div id="emailListWrapper">
         <h1>Email List</h1>
         <p>Join our email list for a space fact every month</p>
         <input type="text"><button>enter</button>
     </div>
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+        integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+        crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
+        integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
+        crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
+        integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
+        crossorigin="anonymous"></script>
 </body>
 <footer>
 
