added background image

--- a/cs1810final/index.html
+++ b/cs1810final/index.html
@@ -29,20 +29,23 @@ font-family: 'Source Sans Pro', sans-serif; -->
             <button>All Posts</button>
             <button>Gallery</button>
             <button>Demo</button>
-            <button>Contact</button>
+            <button>About</button>
 
         </nav>
     </div>
 </header>
 
 <body>
-    <figure>
-        <img src="Jupiter-A-Mind-of-Limits-cropped-top.jpg" width="100%">
+    <div id="mainPageImage">
+        <!-- <figure>
+        <span id="mainPageImage"><img src="Jupiter-A-Mind-of-Limits-cropped-top.jpg" width="100%"></span>
         <figcaption id="figCaption">NASA</figcaption>
-    </figure>
-
-    <quote id="quote">"Curiosity is the essence of our existence"</quote>
-    <p><small>Gene Cernan</small></p>
+    </figure> -->
+        <div id="quote">
+            <quote>"Curiosity is the essence of our existence"</quote>
+            <p><small>Gene Cernan</small></p>
+        </div>
+    </div>
     <hr>
     <div id="recentPostsWrapper">
         <p id="recentPostsHeader">Recent Posts</p>
@@ -85,7 +88,11 @@ font-family: 'Source Sans Pro', sans-serif; -->
         crossorigin="anonymous"></script>
 </body>
 <footer>
-    <div id="footerTextWrapper"><p>links here lol</p><p>links here lol</p><p>links here lol</p></div>
+    <div id="footerTextWrapper">
+        <p>links here lol</p>
+        <p>links here lol</p>
+        <p>links here lol</p>
+    </div>
 </footer>
 
 </html>
