--- a/cs1810final/index.html
+++ b/cs1810final/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>MyBlog</title>
+    <title>AstroBlog | Home</title>
     <!-- Boostrap -->
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
@@ -23,7 +23,7 @@ font-family: 'Jura', sans-serif;
 font-family: 'Source Code Pro', monospace;
 font-family: 'Source Sans Pro', sans-serif; -->
 <header>
-    <p id="logo">TheBlog.Com</p>
+    <p id="logo">AstroBlog.Com</p>
     <div id="navWrapper">
         <nav>
             <button>All Posts</button>
@@ -65,15 +65,16 @@ font-family: 'Source Sans Pro', sans-serif; -->
     <div id="tagsWrapper">
         <p id="tagsHeader">Tags</p><span><small> find something you like by type:</small> </span>
         <div id="tagsList">
-            <p>Life on Mars</p>
-            <p>Astronauts</p>
-            <p>Galaxies</p>
-            <p>Neptune and Nebula</p>
+            <button>Life on Mars</button>
+            <button>Astronauts</button>
+            <button>Galaxies</button>
+            <button>Neptune and Nebulas</button>
+            <button>Influential People</button>
         </div>
     </div>
     <hr>
     <div id="emailListWrapper">
-        <h1>Email List</h1>
+        <p id="emailListHeader">Email List</p>
         <p>Join our email list for a space fact every month</p>
         <input type="text"><button>enter</button>
     </div>
