created post stylesheet

--- a/cs1810final/index.html
+++ b/cs1810final/index.html
@@ -23,7 +23,7 @@ font-family: 'Jura', sans-serif;
 font-family: 'Source Code Pro', monospace;
 font-family: 'Source Sans Pro', sans-serif; -->
 <header>
-    <p id="logo">AstroBlog.Com</p>
+    <p id="logo">AstroBlog</p>
     <div id="navWrapper">
         <nav>
             <button>All Posts</button>
