--- a/cs1810final/Post1.html
+++ b/cs1810final/Post1.html
@@ -7,23 +7,29 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Post1</title>
     <link rel="stylesheet" href="Post.css">
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Hubballi&family=Julius+Sans+One&family=Jura:wght@300&family=Source+Code+Pro:wght@200&family=Source+Sans+Pro&display=swap"
+        rel="stylesheet">
 </head>
 
 <body>
     <header>
-        <h1><a href="index.html">TheBlog.Com</a></h1>
+        <p><a href="index.html" id="logo">AstroBlog</a></p>
     </header>
 
     <body>
         <div id="navWrapper">
             <nav>
-                <ul>
-                    <li>All Posts</li>
-                    <li>Contact</li>
-                </ul>
+                <button>All Posts</button>
+                <button>Gallery</button>
+                <button>Demo</button>
+                <button>About</button>
             </nav>
         </div>
-        
+
         <div id="postDetails">
             <h3>Post Details</h3>
             <ul>
@@ -38,26 +44,35 @@
         </div>
         <hr>
         <main>
-            <h1>Duis Aute Irure</h1>
-            <p>Lorem ipsum <strong> sit amet</strong>, consectetur <b>adipiscing</b> elit, sed do eiusmod tempor incididunt ut labore et
-                dolore magna aliqua. <i>Ut enim ad minim</i> veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip
-                ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore
-                eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia
-                deserunt mollit anim id est laborum.</p>
-            <h2>Nulla Pariatur</h2>
-            <p> Labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi
-                ut aliquip
-                ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore
-                eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia
-                deserunt mollit anim id est laborum.</p>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
-                dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip
-                ex ea commodo consequat. </p>
+            <div id="postWrapper">
+                <h1>Life on Mars</h1>
+                <p>In the Fall of 1964, the Mariner 4 frantically captured it 6-bit images of Mars. With just 310 Watts
+                    of solar power (just enough to power one vaccuum cleaner) the Mariner 4 sent those images back to Earth
+                    from deep space. However, the first ever close-up images of Mars showed something scientists didn`t
+                    expect: Earths closest cousin in our solar system seemed to have <em>craters</em>.</p>
+                <p>Why was this so detrimental during the Mariner 4 mission? Promintent craters mean little volcanic and
+                    water activity (like the craters of our dead, atmospherically thin moon). Compared to our fertile
+                    earth who’s volcanic activity provided us with a dense enough atmosphere to contain water and oxygen
+                    supply. </p>
+                <figure>
+                    <img src="Mariner-4-Mars-Image.png">
+                    <figcaption>One of the first close-up images of Mars taken by NASA`s, the Mariner 4 in 1964. Shows
+                        the sun casting shadows on massive craters left behind from the planets creation. </figcaption>
+                </figure>
+                <p>Mars, like other "dead planets" has a thin atmosphere. The cratered surface has not been worn away by
+                    water, but there is evidence that it contained great lakes at one point in its early existence. </p>
+                <h2>What do you need to sustain life?</h2>
+                <h3>Mars water</h3>
+                <p>While Mars does contain water, most of it is in a permafrost, a layer of ice that doesn’t melt
+                    throughout the year. You can also see ice caps on Mars. We have learned from our rovers that there
+                    might be a layer of water casted in pockets of rock.</p>
+                <p>This water may or may not be usable. We would need to create complex systems of water management.</p>
+            </div>
         </main>
 
         <hr>
         <div id="otherPosts">
-            <h2>Other posts you might like</h2>
+            <p id="otherPostsHeader">Related</p>
             <h1>Duis Aute Irure</h1>
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
                 dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip
