--- a/cs1810final/index.html
+++ b/cs1810final/index.html
@@ -23,6 +23,10 @@ font-family: 'Jura', sans-serif;
 font-family: 'Source Code Pro', monospace;
 font-family: 'Source Sans Pro', sans-serif; -->
 <header>
+    
+</header>
+
+<body>
     <p id="logo">AstroBlog</p>
     <div id="navWrapper">
         <nav>
@@ -30,12 +34,8 @@ font-family: 'Source Sans Pro', sans-serif; -->
             <button>Gallery</button>
             <button>Demo</button>
             <button>About</button>
-
         </nav>
     </div>
-</header>
-
-<body>
     <div id="mainPageImage">
         <!-- <figure>
         <span id="mainPageImage"><img src="Jupiter-A-Mind-of-Limits-cropped-top.jpg" width="100%"></span>
@@ -49,14 +49,11 @@ font-family: 'Source Sans Pro', sans-serif; -->
     <hr>
     <div id="recentPostsWrapper">
         <p id="recentPostsHeader">Recent Posts</p>
+        <hr>
         <div id="recentPost1Wrapper">
             <a id="postLink" href="Post1.html">
-                <h1>Duis Aute Irure</h1>
-                <p> Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
-                    et
-                    dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
-                    aliquip
-                    ex ea commodo conseq ... </p>
+                <h1>Life on Mars</h1>
+                <p> In the Fall of 1964, the Mariner 4 frantically captured it 6-bit images of Mars.  With just 310 Watts of solar power (just enough to power one vaccuum cleaner) the Mariner 4 sent those images to Earth from deep space ... </p>
                 <p><small>01/15/2032</small></p>
             </a>
         </div>
