may have messed up nav bar

--- a/cs1810final/index.html
+++ b/cs1810final/index.html
@@ -23,19 +23,25 @@ font-family: 'Jura', sans-serif;
 font-family: 'Source Code Pro', monospace;
 font-family: 'Source Sans Pro', sans-serif; -->
 <header>
-    
+
 </header>
 
 <body>
-    <p id="logo">AstroBlog</p>
     <div id="navWrapper">
         <nav>
-            <button>All Posts</button>
-            <button>Gallery</button>
-            <button>Demo</button>
-            <button>About</button>
+            <span class="listItem" id="logo">AstroBlog</span>
+            <span class="listItem">All Posts</span>
+            <span class="listItem">Gallery</span>
+            <span class="listItem">Demo</span>
+            <span class="listItem">About</span>
         </nav>
     </div>
+    <!-- <div class="flex-container">
+        <div class="listItem">All Posts</div>
+        <div class="listItem">Gallery</div>
+        <div class="listItem">Demo</div>
+        <div class="listItem">About</div>
+    </div> -->
     <div id="mainPageImage">
         <!-- <figure>
         <span id="mainPageImage"><img src="Jupiter-A-Mind-of-Limits-cropped-top.jpg" width="100%"></span>
@@ -53,7 +59,9 @@ font-family: 'Source Sans Pro', sans-serif; -->
         <div id="recentPost1Wrapper">
             <a id="postLink" href="Post1.html">
                 <h1>Life on Mars</h1>
-                <p> In the Fall of 1964, the Mariner 4 frantically captured it 6-bit images of Mars.  With just 310 Watts of solar power (just enough to power one vaccuum cleaner) the Mariner 4 sent those images to Earth from deep space ... </p>
+                <p> In the Fall of 1964, the Mariner 4 frantically captured it 6-bit images of Mars. With just 310 Watts
+                    of solar power (just enough to power one vaccuum cleaner) the Mariner 4 sent those images to Earth
+                    from deep space ... </p>
                 <p><small>01/15/2032</small></p>
             </a>
         </div>
