Added about page and link

--- a/cs1810final/index.html
+++ b/cs1810final/index.html
@@ -33,7 +33,7 @@ font-family: 'Source Sans Pro', sans-serif; -->
             <span class="listItem">All Posts</span>
             <span class="listItem">Gallery</span>
             <span class="listItem">Demo</span>
-            <span class="listItem">About</span>
+            <span class="listItem"> <a href="About.html">About</a></span>
         </nav>
     </div>
     <!-- <div class="flex-container">
