--- a/cs1810final/index.html
+++ b/cs1810final/index.html
@@ -32,7 +32,7 @@ font-family: 'Source Sans Pro', sans-serif; -->
             <span class="listItem" id="logo">AstroBlog</span>
             <span class="listItem">All Posts</span>
             <span class="listItem">Gallery</span>
-            <span class="listItem">Demo</span>
+            <span class="listItem"><a href="Demo.html">Demo</a></span>
             <span class="listItem"> <a href="About.html">About</a></span>
         </nav>
     </div>
