--- a/cs1810final/Demo.html
+++ b/cs1810final/Demo.html
@@ -8,25 +8,26 @@
     <title>Demo</title>
 </head>
 
-<body></body>
-<label>How many ... </label>
-<select>
-    <option id="Earths">Earths</option>
-    <option id="Jupiters">Jupiters</option>
-    <option id="Plutos">Plutos</option>
-    <option id="Saturns">Saturns</option>
-    <option id="Uransuses">Uranuses</option>
-</select>
+<body>
+    <label>How many ... </label>
+    <select id="selectPlanet">
+        <option id="Earths">Earths</option>
+        <option id="Jupiters">Jupiters -- unavailable</option>
+        <option id="Plutos">Plutos -- unavailable</option>
+        <option id="Saturns">Saturns -- unavailable</option>
+        <option id="Uransuses">Uranuses -- unavailable</option>
+    </select>
 
-<label>can you fit into ... </label>
-<select>
-    <option id="TheSun">The Sun</option>
-    <option id="Earth">Earth</option>
-    <option id="Saturn">Saturn</option>
-    <option id="Pluto">Pluto</option>
-    <option></option>
-</select>
-<script src="Demo.js"></script>
+    <label>can you fit into ... </label>
+    <select id="selectContainingPlanet">
+        <option id="TheSun">The Sun -- unavailable</option>
+        <option id="Earth">Earth -- unavailable</option>
+        <option id="Saturn">Saturn -- unavailable</option>
+        <option id="Pluto">Pluto -- unavailable</option>
+        <option id="Jupiter">Jupiter</option>
+    </select>
+    <p id="display"></p>
+    <script src="Demo.js"></script>
 </body>
 
 </html>
