--- a/cs1810final/index.html
+++ b/cs1810final/index.html
@@ -6,6 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>AstroBlog | Home</title>
+    <link rel="icon" type="image/x-icon" href="symbol-39086_1280.webp">
+
     <!-- Boostrap -->
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
