resize nav bar. responsive header size

--- a/cs1810final/index.html
+++ b/cs1810final/index.html
@@ -9,15 +9,15 @@
     <link rel="icon" type="image/x-icon" href="symbol-39086_1280.webp">
 
     <!-- Boostrap -->
-    <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
-        integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <!-- Google Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link
-        href="https://fonts.googleapis.com/css2?family=Hubballi&family=Julius+Sans+One&family=Jura:wght@300&family=Source+Code+Pro:wght@200&family=Source+Sans+Pro&display=swap"
-        rel="stylesheet">
+    href="https://fonts.googleapis.com/css2?family=Hubballi&family=Julius+Sans+One&family=Jura:wght@300&family=Source+Code+Pro:wght@200&family=Source+Sans+Pro&display=swap"
+    rel="stylesheet">
+    <link rel="stylesheet" href="styles.css">
 </head>
 <!-- font-family: 'Hubballi', cursive;
 font-family: 'Julius Sans One', sans-serif;
@@ -29,7 +29,7 @@ font-family: 'Source Sans Pro', sans-serif; -->
 </header>
 
 <body>
-    <div id="navWrapper">
+    
         <nav>
             <span class="listItem" id="logo">AstroBlog</span>
             <span class="listItem">All Posts</span>
@@ -37,7 +37,7 @@ font-family: 'Source Sans Pro', sans-serif; -->
             <span class="listItem"><a href="Demo.html">Demo</a></span>
             <span class="listItem"> <a href="About.html">About</a></span>
         </nav>
-    </div>
+    
     <!-- <div class="flex-container">
         <div class="listItem">All Posts</div>
         <div class="listItem">Gallery</div>
@@ -60,7 +60,7 @@ font-family: 'Source Sans Pro', sans-serif; -->
         <hr>
         <div id="recentPost1Wrapper">
             <a id="postLink" href="Post1.html">
-                <h1>Life on Mars</h1>
+                <h1 id="recentPostTitle">Life on Mars</h1>
                 <p> In the Fall of 1964, the Mariner 4 frantically captured it 6-bit images of Mars. With just 310 Watts
                     of solar power (just enough to power one vaccuum cleaner) the Mariner 4 sent those images to Earth
                     from deep space ... </p>
