Added AllPosts page

--- a/cs1810final/About.html
+++ b/cs1810final/About.html
@@ -18,20 +18,17 @@
 <body>
 
     <header>
-        <p><a href="index.html" id="logo">AstroBlog</a></p>
-        <div id="navWrapper">
-            <nav>
-                <span class="listItem" id="logo">AstroBlog</span>
-                <span class="listItem">All Posts</span>
-                <span class="listItem">Gallery</span>
-                <span class="listItem">Demo</span>
-                <span class="listItem">About</span>
-            </nav>
-        </div>
+        <nav>
+            <span class="listItem" id="logo"><a href="index.html">AstroBlog</a></span>
+            <span class="listItem">All Posts</span>
+            <span class="listItem">Gallery</span>
+            <span class="listItem"><a href="Demo.html">Demo</a></span>
+            <span class="listItem"> <a href="About.html">About</a></span>
+        </nav>
     </header>
 
     <body>
-        <div ckass="content">
+        <div class="content">
             <h1>About</h1>
             <p>This blog was made as a web developement class project by Dusty Shaw.</p>
         </div>
