--- a/cs1810final/index.html
+++ b/cs1810final/index.html
@@ -32,18 +32,12 @@ font-family: 'Source Sans Pro', sans-serif; -->
 
     <nav>
         <span class="listItem" id="logo">AstroBlog</span>
-        <span class="listItem">All Posts</span>
+        <span class="listItem"><a href="AllPosts.html">All Posts</a></span>
         <span class="listItem">Gallery</span>
         <span class="listItem"><a href="Demo.html">Demo</a></span>
         <span class="listItem"> <a href="About.html">About</a></span>
     </nav>
 
-    <!-- <div class="flex-container">
-        <div class="listItem">All Posts</div>
-        <div class="listItem">Gallery</div>
-        <div class="listItem">Demo</div>
-        <div class="listItem">About</div>
-    </div> -->
     <div id="mainPageImage">
         <!-- <figure>
         <span id="mainPageImage"><img src="Jupiter-A-Mind-of-Limits-cropped-top.jpg" width="100%"></span>
@@ -54,10 +48,9 @@ font-family: 'Source Sans Pro', sans-serif; -->
             <p><small>Gene Cernan</small></p>
         </div>
     </div>
-    <hr>
-    <div class="side">.</div>
+
     <p id="recentPostsHeader">Recent Posts</p>
-    <hr>
+    
     <div id="recentPostsWrapper">
         <div id="recentPost1Wrapper">
             <a id="postLink" href="Post1.html">
@@ -71,15 +64,17 @@ font-family: 'Source Sans Pro', sans-serif; -->
         <div id="recentPost2Wrapper">
             <a id="postLink" href="Post1.html">
                 <h1 id="recentPostTitle">Post 2</h1>
-                <p> In the Fall of 1964, the Mariner 4 frantically captured it 6-bit images of Mars. With just 310 Watts
+                <img src="Mariner-4-Mars-Image.png" style="width: 80%;">
+                <p style="float: inline-end;"> In the Fall of 1964, the Mariner 4 frantically captured it 6-bit images of Mars. With just 310 Watts
                     of solar power (just enough to power one vaccuum cleaner) the Mariner 4 sent those images to Earth
                     from deep space ... </p>
                 <p><small>01/15/2032</small></p>
             </a>
         </div>
     </div>
-    <div class="side">.</div>
+  
     <hr>
+
     <div id="tagsWrapper">
         <p id="tagsHeader">Tags</p><span><small> find something you like by type:</small> </span>
         <div id="tagsList">
