Added gallery imgs grid

--- a/cs1810final/index.html
+++ b/cs1810final/index.html
@@ -33,7 +33,7 @@ font-family: 'Source Sans Pro', sans-serif; -->
     <nav>
         <span class="listItem" id="logo">AstroBlog</span>
         <span class="listItem"><a href="AllPosts.html">All Posts</a></span>
-        <span class="listItem">Gallery</span>
+        <span class="listItem"><a href="Gallery.html">Gallery</a></span>
         <span class="listItem"><a href="Demo.html">Demo</a></span>
         <span class="listItem"> <a href="About.html">About</a></span>
     </nav>
@@ -64,7 +64,7 @@ font-family: 'Source Sans Pro', sans-serif; -->
         <div id="recentPost2Wrapper">
             <a id="postLink" href="Post1.html">
                 <h1 id="recentPostTitle">Post 2</h1>
-                <img src="Mariner-4-Mars-Image.png" style="width: 80%;">
+                <img src="Mariner-4-Mars-Image.png" style="width: 80%; padding-left: 30px;">
                 <p style="float: inline-end;"> In the Fall of 1964, the Mariner 4 frantically captured it 6-bit images of Mars. With just 310 Watts
                     of solar power (just enough to power one vaccuum cleaner) the Mariner 4 sent those images to Earth
                     from deep space ... </p>
