--- a/cs1810final/Post1.html
+++ b/cs1810final/Post1.html
@@ -23,10 +23,11 @@
     <body>
         <div id="navWrapper">
             <nav>
-                <button>All Posts</button>
-                <button>Gallery</button>
-                <button>Demo</button>
-                <button>About</button>
+                <span class="listItem" id="logo">AstroBlog</span>
+                <span class="listItem"><a href="AllPosts.html">All Posts</a></span>
+                <span class="listItem"><a href="Gallery.html">Gallery</a></span>
+                <span class="listItem"><a href="Demo.html">Demo</a></span>
+                <span class="listItem"> <a href="About.html">About</a></span>
             </nav>
         </div>
 
