fixed nav bar text

--- a/cs1810final/Gallery.html
+++ b/cs1810final/Gallery.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Post1</title>
+    <title>Gallery</title>
     <link rel="stylesheet" href="Gallery.css">
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -29,9 +29,9 @@
 <body>
     <h1>Gallery</h1>
     <div id="imageContainer">
-        <img id="img1" src="Jupiter-A-Mind-of-Limits.jpg">
+        <a href="index.html"><img id="img1" src="Jupiter-A-Mind-of-Limits.jpg"></a>
         <img id="img3" src="hubble_arp143.png">
-        <img id="img2" src="Mariner-4-Mars-Image.png">
+        <a href="Post1.html" id="img2"><img src="Mariner-4-Mars-Image.png"></a>
     </div>
 
 </body>
