--- a/cs1810final/Post1.html
+++ b/cs1810final/Post1.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Post1</title>
+    <title>Life On Mars</title>
     <link rel="stylesheet" href="Post.css">
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -23,7 +23,7 @@
     <body>
         <div id="navWrapper">
             <nav>
-                <span class="listItem" id="logo">AstroBlog</span>
+                <span class="listItem" id="logo"><a href="index.html">AstroBlog</a></span>
                 <span class="listItem"><a href="AllPosts.html">All Posts</a></span>
                 <span class="listItem"><a href="Gallery.html">Gallery</a></span>
                 <span class="listItem"><a href="Demo.html">Demo</a></span>
