--- a/cs1810final/About.html
+++ b/cs1810final/About.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Post1</title>
+    <title>About</title>
     <link rel="stylesheet" href="About.css">
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -19,7 +19,7 @@
 
     <header>
         <nav>
-            <span class="listItem" id="logo">AstroBlog</span>
+            <span class="listItem" id="logo"><a href="index.html">AstroBlog</a></span>
             <span class="listItem"><a href="AllPosts.html">All Posts</a></span>
             <span class="listItem"><a href="Gallery.html">Gallery</a></span>
             <span class="listItem"><a href="Demo.html">Demo</a></span>
