--- a/cs1810final/AllPosts.html
+++ b/cs1810final/AllPosts.html
@@ -19,7 +19,7 @@
 
     <header>
         <nav>
-            <span class="listItem" id="logo">AstroBlog</span>
+            <span class="listItem" id="logo"><a href="index.html">AstroBlog</a></span>
             <span class="listItem"><a href="AllPosts.html">All Posts</a></span>
             <span class="listItem"><a href="Gallery.html">Gallery</a></span>
             <span class="listItem"><a href="Demo.html">Demo</a></span>
