--- a/cs1810final/Post1.html
+++ b/cs1810final/Post1.html
@@ -38,8 +38,8 @@
                 <li>Author: </li>
                 <li>Tags:</li>
                 <ul>
-                    <li>tag 1</li>
-                    <li>tag 2</li>
+                    <li alt="Space_Exploration">Space Exploration</li>
+                    <li alt="The_Planets">The Planets</li>
                 </ul>
             </ul>
         </div>
