--- a/cs1810final/index.html
+++ b/cs1810final/index.html
@@ -17,6 +17,8 @@
     <link
         href="https://fonts.googleapis.com/css2?family=Hubballi&family=Julius+Sans+One&family=Jura:wght@300&family=Source+Code+Pro:wght@200&family=Source+Sans+Pro&display=swap"
         rel="stylesheet">
+    
+    <!-- My style sheet -->
     <link rel="stylesheet" href="styles.css">
 </head>
 <!-- font-family: 'Hubballi', cursive;
@@ -24,9 +26,6 @@ font-family: 'Julius Sans One', sans-serif;
 font-family: 'Jura', sans-serif;
 font-family: 'Source Code Pro', monospace;
 font-family: 'Source Sans Pro', sans-serif; -->
-<header>
-
-</header>
 
 <body>
 
@@ -34,21 +33,21 @@ font-family: 'Source Sans Pro', sans-serif; -->
         <span class="listItem" id="logo">AstroBlog</span>
         <span class="listItem"><a href="AllPosts.html">All Posts</a></span>
         <span class="listItem"><a href="Gallery.html">Gallery</a></span>
-        <span class="listItem"><a href="Demo.html">Demo</a></span>
+        <span class="listItem"><a href="Demo.html" target="_blank">Demo</a></span>
         <span class="listItem"> <a href="About.html">About</a></span>
     </nav>
 
     <div id="mainPageImage">
-        <div id="quote">
+        <!-- <div id="quote">
             <quote>"Curiosity is the essence of our existence"</quote>
             <p><small>Gene Cernan</small></p>
-        </div>
+        </div> -->
     </div>
 
     <p id="recentPostsHeader">Recent Posts</p>
     
     <div id="recentPostsWrapper">
-        <div id="recentPost1Wrapper">
+        <div class="blogPost" id="recentPost1Wrapper">
             <a id="postLink" href="Post1.html">
                 <h1 id="recentPostTitle">Life on Mars</h1>
                 <p> In the Fall of 1964, the Mariner 4 frantically captured it 6-bit images of Mars. With just 310 Watts
@@ -57,7 +56,7 @@ font-family: 'Source Sans Pro', sans-serif; -->
                 <p><small>01/15/2032</small></p>
             </a>
         </div>
-        <div id="recentPost2Wrapper">
+        <div class="blogPost" id="recentPost2Wrapper">
             <a id="postLink" href="Post1.html">
                 <h1 id="recentPostTitle">Post 2</h1>
                 <img src="Mariner-4-Mars-Image.png" style="width: 80%; padding-left: 30px;">
