--- a/cs1810final/AllPosts.html
+++ b/cs1810final/AllPosts.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Post1</title>
+    <title>All Posts</title>
     <link rel="stylesheet" href="AllPosts.css">
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -30,6 +30,16 @@
     <body>
         <div class="content">
             <h1>All Posts</h1>
+            <div id="tagsWrapper">
+                <p id="tagsHeader">Tags</p><span><small> find something you like by type:</small> </span>
+                <div id="tagsList">
+                    <button alt="Mars" alt="Space_Exploration">Life on Mars</button>
+                    <button>Astronauts</button>
+                    <button>Galaxies</button>
+                    <button>Neptune and Nebulas</button>
+                    <button>Influential People</button>
+                </div>
+            </div>
             <div id="recentPostsWrapper">
                 <div id="recentPost1Wrapper">
                     <a id="postLink" href="Post1.html">
