before final checkpoint commit

--- a/cs1810final/About.html
+++ b/cs1810final/About.html
@@ -16,31 +16,27 @@
 </head>
 
 <body>
+    <nav>
+        <span class="listItem" id="logo"><a href="index.html">AstroBlog</a></span>
+        <span class="listItem"><a href="AllPosts.html">All Posts</a></span>
+        <span class="listItem"><a href="Gallery.html">Gallery</a></span>
+        <span class="listItem"><a href="Demo.html" target="_blank">Demo</a></span>
+        <span class="listItem"> <a href="About.html">About</a></span>
+    </nav>
 
-    <header>
-        <nav>
-            <span class="listItem" id="logo"><a href="index.html">AstroBlog</a></span>
-            <span class="listItem"><a href="AllPosts.html">All Posts</a></span>
-            <span class="listItem"><a href="Gallery.html">Gallery</a></span>
-            <span class="listItem"><a href="Demo.html">Demo</a></span>
-            <span class="listItem"> <a href="About.html">About</a></span>
-        </nav>
-    </header>
-
-    <body>
-        <div class="content">
-            <h1>About</h1>
-            <p>This blog was made as a web developement class project by Dusty Shaw.</p>
+    <div class="content">
+        <h1>About</h1>
+        <p>This blog was made as a web developement class project by Dusty Shaw.</p>
+    </div>
+    <footer id="footerWrapper">
+        <div id="footerTextWrapper">
+            <p>links here lol</p>
+            <p>links here lol</p>
+            <p>links here lol</p>
         </div>
-        <footer id="footerWrapper">
-            <div id="footerTextWrapper">
-                <p>links here lol</p>
-                <p>links here lol</p>
-                <p>links here lol</p>
-            </div>
-        </footer>
-    </body>
-
+    </footer>
 </body>
+
+
 
 </html>
