--- a/cs1810final/Post1.html
+++ b/cs1810final/Post1.html
@@ -17,20 +17,17 @@
 
 <body>
     <header>
-        <p><a href="index.html" id="logo">AstroBlog</a></p>
+        
     </header>
 
     <body>
-        <div id="navWrapper">
-            <nav>
-                <span class="listItem" id="logo"><a href="index.html">AstroBlog</a></span>
-                <span class="listItem"><a href="AllPosts.html">All Posts</a></span>
-                <span class="listItem"><a href="Gallery.html">Gallery</a></span>
-                <span class="listItem"><a href="Demo.html">Demo</a></span>
-                <span class="listItem"> <a href="About.html">About</a></span>
-            </nav>
-        </div>
-
+        <nav>
+            <span class="listItem" id="logo"><a href="index.html">AstroBlog</a></span>
+            <span class="listItem"><a href="AllPosts.html">All Posts</a></span>
+            <span class="listItem"><a href="Gallery.html">Gallery</a></span>
+            <span class="listItem"><a href="Demo.html" target="_blank">Demo</a></span>
+            <span class="listItem"> <a href="About.html">About</a></span>
+        </nav>
         <div id="postDetails">
             <h3>Post Details</h3>
             <ul>
