--- a/cs1810final/index.html
+++ b/cs1810final/index.html
@@ -30,7 +30,7 @@ font-family: 'Source Sans Pro', sans-serif; -->
 <body>
 
     <nav>
-        <span class="listItem" id="logo">AstroBlog</span>
+        <span class="listItem" id="logo"><a href="index.html">AstroBlog</a></span>
         <span class="listItem"><a href="AllPosts.html">All Posts</a></span>
         <span class="listItem"><a href="Gallery.html">Gallery</a></span>
         <span class="listItem"><a href="Demo.html" target="_blank">Demo</a></span>
