--- a/cs1810final/AllPosts.html
+++ b/cs1810final/AllPosts.html
@@ -17,15 +17,13 @@
 
 <body>
 
-    <header>
-        <nav>
-            <span class="listItem" id="logo"><a href="index.html">AstroBlog</a></span>
-            <span class="listItem"><a href="AllPosts.html">All Posts</a></span>
-            <span class="listItem"><a href="Gallery.html">Gallery</a></span>
-            <span class="listItem"><a href="Demo.html">Demo</a></span>
-            <span class="listItem"> <a href="About.html">About</a></span>
-        </nav>
-    </header>
+    <nav>
+        <span class="listItem" id="logo"><a href="index.html">AstroBlog</a></span>
+        <span class="listItem"><a href="AllPosts.html">All Posts</a></span>
+        <span class="listItem"><a href="Gallery.html">Gallery</a></span>
+        <span class="listItem"><a href="Demo.html" target="_blank">Demo</a></span>
+        <span class="listItem"> <a href="About.html">About</a></span>
+    </nav>
 
     <body>
         <div class="content">
