--- a/cs1810final/AllPosts.html
+++ b/cs1810final/AllPosts.html
@@ -13,6 +13,7 @@
     <link
         href="https://fonts.googleapis.com/css2?family=Hubballi&family=Julius+Sans+One&family=Jura:wght@300&family=Source+Code+Pro:wght@200&family=Source+Sans+Pro&display=swap"
         rel="stylesheet">
+    <script src="AllPosts.js"></script>
 </head>
 
 <body>
@@ -31,7 +32,7 @@
             <div id="tagsWrapper">
                 <p id="tagsHeader">Tags</p><span><small> find something you like by type:</small> </span>
                 <div id="tagsList">
-                    <button alt="Mars" alt="Space_Exploration">Life on Mars</button>
+                    <button id="MarsTagButton" alt="Mars" alt="Space_Exploration">Life on Mars</button>
                     <button>Astronauts</button>
                     <button>Galaxies</button>
                     <button>Neptune and Nebulas</button>
@@ -39,7 +40,7 @@
                 </div>
             </div>
             <div id="recentPostsWrapper">
-                <div id="recentPost1Wrapper">
+                <div alt="MarsPost" id="recentPost1Wrapper">
                     <a id="postLink" href="Post1.html">
                         <h1 id="recentPostTitle">Life on Mars</h1>
                         <p> In the Fall of 1964, the Mariner 4 frantically captured it 6-bit images of Mars. With just
